--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <base href="/" />
+    <base href="https://bbvlucky.github.io/react-app/" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link rel="stylesheet" href="https://bbvlucky.github.io/react-app/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Irakliy K. HW 7</title>
 <link href="style.css" rel="stylesheet"></head>
 <body>
     <div class="container" id="app"></div>
     
     
-<script type="text/javascript" src="https://bbvlucky.github.io/react-app/ready.js"></script></body>
+<script type="text/javascript" src="./ready.js"></script></body>
 </html>
