--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <div class="container" id="app"></div>
     
     
-<script type="text/javascript" src="./ready.js"></script></body>
+<script type="text/javascript" src="ready.js"></script></body>
 </html>
